postgres-deploment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
     component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: database-per
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
