client-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  client-cluster-ip-service
spec:
  selector:
    component: web
  type:   ClusterIP 
  ports:
   - port:  3000
     targetPort:  3000
