redis-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  redis-cluster-ip-service
spec:
  selector:
    component: redis
  type:   ClusterIP 
  ports:
   - port:  6379
     targetPort:  6379
