ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-services
  annotation:
     nginx.ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: "nginx"
  spec:
   rules:
   - http:
      paths:
      - path: /api/
        backend:
          serviceName: server-cluster-ip-service
          servicePort: 5000
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
